Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94890

Shortcut with "Backtab" does not work for Windows

XMLWordPrintable

    • Windows
    • 4d9f99c4e (dev), 6d8afaac8 (6.9), 4df1256cf (6.8)

      Shortcut with "Backtab" ("Shift+Tab" or "Ctrl+Shift+Tab" e. t. c.) does not work for Windows, for Linux "Backtab" works fine.

      import QtQuick 2.15
      import QtQuick.Window 2.15
      
      Window {
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World")
      
          Shortcut {
              sequence: "Backtab"
      
              onActivated: console.info(sequence)
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            morteza.jamshidi Morteza Jamshidi
            asudovtsov Andrey Sudovtsov
            Votes:
            3 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes